kustomize/anduin-gateway/overlays/prod/deployment.yaml
# NOTE: image is a placeholder — argonath has no dedicated build yet.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anduin-gateway
spec:
  template:
    spec:
      containers:
        - name: service
          image: us-west1-docker.pkg.dev/argonath/pub/argonath-gateway:prod
      nodeSelector:
        intended-for: argonath-prod-backend
