kustomize/anduin-gateway/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anduin-gateway
  annotations:
    kubernetes.io/ingress.class: "vpn-ingress"
    nginx.ingress.kubernetes.io/proxy-body-size: "10G"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: vpn-ingress
  tls:
  - hosts:
    - argonath.library.ucdavis.edu
    secretName: argonath-wildcard-tls
  rules:
  - host: argonath.library.ucdavis.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: anduin-gateway
            port:
              number: 4000
